--- a/css/media-queries.css
+++ b/css/media-queries.css
@@ -4,6 +4,13 @@
     }
 }
 
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 480px) {   
+    .row {
+        flex-wrap: wrap;
+    }
 
+    .col {
+        flex-basis: 100%;
+        padding-block: 2rem;
+    }
 }
